--- a/src/styles/nav/index.scss
+++ b/src/styles/nav/index.scss
@@ -7,7 +7,6 @@
     padding: 0.5rem $horizontal-padding;
     background: #ffffff;
     z-index: 1000;
-    overflow-x: hidden;
 
     position: sticky;
     top: 0;
